--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="./snxrp.js" ></script>
+  <script src="https://unpkg.com/xrpl@2.1.1/build/xrpl-latest-min.js" src="./snxrp.js" ></script>
+  <script src="./JavaScript.js" ></script>
   <title>SNXRP</title>
 </head>
 <body>
   <h1>Welcome to Snake Nation's </h1>
+  
 </body>
 </html>
